# r5py.sampledata.sao_paulo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-and-deploy-v-tags.yml
data/: README.md
src/r5py/sampledata/CHANGE_THIS/: __init__.py
src/r5py/sampledata/sao_paulo/: __init__.py
tests/: conftest.py  test_data_sets.py
